<resources>
    <string name="app_name">GeneradorINEI</string>
    <string name="texto_usuario">USUARIO</string>
    <string name="texto_password">CONTRASEÑA</string>
    <string name="texto_ingresar">INGRESAR</string>
    <string name="arroba">\@</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="visita_V_NUM">V_NUM</string>
    <string name="visita_V_DIA">V_DIA</string>
    <string name="visita_V_MES">V_MES</string>
    <string name="visita_V_ANIO">V_ANIO</string>
    <string name="visita_V_HI">V_HI</string>
    <string name="visita_V_MI">V_MI</string>
    <string name="visita_V_HF">V_HF</string>
    <string name="visita_V_MF">V_MF</string>
    <string name="visita_V_RES">V_RES</string>
    <string name="visita_V_PROX_DIA">V_PROX_DIA</string>
    <string name="visita_V_PROX_MES">V_PROX_MES</string>
    <string name="visita_V_PROX_ANIO">V_PROX_ANIO</string>
    <string name="visita_V_PROX_HORA">V_PROX_HORA</string>
    <string name="visita_V_PROX_MIN">V_PROX_MIN</string>
    <string name="visita_RES_FINAL">RES_FINAL</string>
    <string name="visita_RES_DIA">RES_DIA</string>
    <string name="visita_RES_MES">RES_MES</string>
    <string name="visita_RES_ANIO">RES_ANIO</string>
    <string name="visita_RES_HORA">RES_HORA</string>
    <string name="visita_RES_MIN">RES_MIN</string>
    <string name="ubicacion_CAR_DD">CAR_DD</string>
    <string name="ubicacion_CAR_PV">CAR_PV</string>
    <string name="ubicacion_CAR_DS">CAR_DS</string>
    <string name="gps_CAR_LAT">CAR_LAT</string>
    <string name="gps_CAR_LONG">CAR_LONG</string>
    <string name="gps_CAR_ALT">CAR_ALT</string>
    <string-array name="item_spinner">
        <item>Seleccione...</item>
        <item>item1</item>
        <item>item2</item>
        <item>item3</item>
        <item>item4</item>
        <item>item5</item>
    </string-array>
    <string-array name="array_tipo_encuesta">
        <item>Seleccione...</item>
        <item>EMPRESAS</item>
    </string-array>
    <string-array name="prioridad">
        <item>Seleccione...</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="tipos_componentes">
        <item>Seleccione tipo</item>
        <item>VISITAS</item>
        <item>UBICACION</item>
        <item>GPS</item>
        <item>FORMULARIO</item>
        <item>EDITTEXT</item>
        <item>CHECKBOX</item>
        <item>RADIO</item>
    </string-array>
    <string-array name="tipos_modulos">
        <item>Seleccione tipo</item>
        <item>VISITAS</item>
        <item>ESTANDAR</item>
    </string-array>
    <string-array name="sexo_spinner">
        <item>Seleccione sexo</item>
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
    <string-array name="estudios_spinner">
        <item>Seleccione Nivel de Estudios</item>
        <item>1.Sin nivel</item>
        <item>2.Inicial</item>
        <item>3.Primaria incompleta</item>
        <item>4.Primaria completa</item>
        <item>5.Secundaria incompleta</item>
        <item>6.Secundaria completa</item>
        <item>7.Superior no universitaria incompleta</item>
        <item>8.Superior no universitaria completa</item>
        <item>9.Superior universitaria incompleta</item>
        <item>10.Superior universitaria completa</item>
        <item>11.Post grado</item>
    </string-array>
    <string-array name="array_resultado_visita">
        <item>Seleccione</item>
        <item>1.Completa</item>
        <item>2.Incompleta</item>
        <item>3.Ausente</item>
        <item>4.Pendiente con cita</item>
        <item>5.Rechazo</item>
        <item>6.No ubicado</item>
        <item>7.Otro</item>
    </string-array>
    <string-array name="cargos_spinner">
        <item>Seleccione Cargo</item>
        <item>Conductor</item>
        <item>Administrador</item>
        <item>Gerente</item>
        <item>Otro</item>
    </string-array>
    <string-array name="opcion_spinner">
        <item>Seleccione Opcion...</item>
        <item>opcion 1</item>
        <item>opcion 2</item>
        <item>opcion 3</item>
        <item>opcion 4</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="m2p1_pregunta">1.	En los últimos 12 meses, de _____a_______, ¿de qué hecho delictivo ha sido víctima la empresa:</string>
    <string name="m2p1_ck1">Robo o hurto?</string>
    <string name="m2p1_ck2">Intento de robo?</string>
    <string name="m2p1_ck3">Extorsión?</string>
    <string name="m2p1_ck4">Estafa o fraude?</string>
    <string name="m2p1_ck5">Daños a su negocio(vandalismo)?</string>
    <string name="m2p1_ck6">Amenazas?</string>
    <string name="m2p1_ck7">Secuestros?</string>
    <string name="m2p1_ck8">Corrupción?</string>
    <string name="m2p1_ck9">Otro?</string>
    <string name="m2p1_ck10">NINGUNO</string>
    <string name="m2p1_p111_pregunta">1.1.1.¿Qué tipo de objeto le robaron a la empresa:</string>
    <string name="m2p1_p111_ck1">Mobiliario?</string>
    <string name="m2p1_p111_ck2">Maquinaria o equipo industrial?</string>
    <string name="m2p1_p111_ck3">Equipo(s) electrónico(s)?</string>
    <string name="m2p1_p111_ck4">Mercancía por parte del personal?</string>
    <string name="m2p1_p111_ck5">Mercancía por parte de los clientes?</string>
    <string name="m2p1_p111_ck6">Dinero, tarjetas de crédito o cheques?</string>
    <string name="m2p1_p111_ck7">Vehículos (automóviles, camionetas, camiones u otros)?</string>
    <string name="m2p1_p111_ck8">Otro?</string>
    <string name="m2p1_p111_ck7_sp1">7.1.¿Cuántos?</string>
    <string name="m2p1_p111_ck7_sp2">7.2.¿Cuántos estaban asegurados?</string>
    <string name="m2p1_p111_ck7_sp3">7.3.¿Cuántos fueron recuperados?</string>
    <string name="m2p1_p131_pregunta">1.3.1.En los últimos 12 meses, de ____a___, ¿la extorsión que sufrió la empresa fue:</string>
    <string name="m2p1_p131_ck1">Por vía telefónica?</string>
    <string name="m2p1_p131_ck2">Por internet/correo electrónico?</string>
    <string name="m2p1_p131_ck3">En la calle?</string>
    <string name="m2p1_p131_ck4">En la empresa?</string>
    <string name="m2p1_p131_ck5">Otra?</string>
    <string name="m2p1_p132_pregunta">1.3.2.¿Qué le solicitaron:</string>
    <string name="m2p1_p132_ck1">Dinero?</string>
    <string name="m2p1_p132_ck2">Mercancía?</string>
    <string name="m2p1_p132_ck3">Otro?</string>
    <string name="m2p1_p132_ck4">NADA, NO ALCANZÓ A PEDIRLE</string>
    <string name="m2p1_p133_pregunta">1.3.3.¿Entregó lo que le exigía el extorsionador?</string>
    <string name="m2p1_p133_rb1">Sí</string>
    <string name="m2p1_p133_rb2">No</string>
    <string name="m2p1_p134_pregunta">1.3.4.¿Hubo alguna acción en contra de la empresa o del personal por no haber pagado o entregado lo exigido por el extorsionador?</string>
    <string name="m2p1_p134_rb1">Sí</string>
    <string name="m2p1_p134_rb2">No</string>
    <string name="m2p1_p141_pregunta">1.4.1.¿De qué tipo fue:</string>
    <string name="m2p1_p141_ck1">Pago o prestación de un producto y/o servicio no retribuido(por el cliente o proveedor)?</string>
    <string name="m2p1_p141_ck2">Cheque o dinero falso?</string>
    <string name="m2p1_p141_ck3">Desvío de recursos por personal de la empresa?</string>
    <string name="m2p1_p141_ck4">Con Tarjeta de débito o crédito?</string>
    <string name="m2p1_p141_ck5">Por internet / correo electrónico?</string>
    <string name="m2p1_p141_ck6">Otro?</string>
    <string name="m2p1_p151_pregunta">1.5.1.¿Qué tipo de daños vandálicos sufrió la empresa:</string>
    <string name="m2p1_p151_ck1">Saqueos?</string>
    <string name="m2p1_p151_ck2">Daños a vehículos?</string>
    <string name="m2p1_p151_ck3">Incendios provocados?</string>
    <string name="m2p1_p151_ck4">Pintas en fachadas?</string>
    <string name="m2p1_p151_ck5">Destrozo de lunas/ventanas?</string>
    <string name="m2p1_p151_ck6">Otro?</string>
    <string name="m2p1_p171_pregunta">1.7.1.¿Cuánto tiempo lo tuvieron secuestrado:</string>
    <string name="m2p1_p171_ck1">Menos de 24 horas?</string>
    <string name="m2p1_p171_ck2">De 1 a 3 días?</string>
    <string name="m2p1_p171_ck3">De 4 a 10 días?</string>
    <string name="m2p1_p171_ck4">De 11 a 29 días?</string>
    <string name="m2p1_p171_ck5">De 1 a 3 meses?</string>
    <string name="m2p1_p171_ck6">Más de 3 meses?</string>
    <string name="m2p1_p171_ck7">NO SABE</string>
    <string name="m2p1_p172_pregunta">1.7.2.¿Los secuestradores:</string>
    <string name="m2p1_p172_ck1">Exigieron rescate por su liberación?</string>
    <string name="m2p1_p172_ck2">Le obligaron a retirar dinero de un cajero?</string>
    <string name="m2p1_p172_ck3">Le exigieron entregar joyas, celular u otros bienes?</string>
    <string name="m2p1_p172_ck4">Otro? </string>
    <string name="m2p1_p172_ck5">NO SABE</string>
    <string name="m2p1_p173_pregunta">1.7.3.¿Entregó lo que le exigían los secuestradores?</string>
    <string name="m2p1_p173_rb1">Sí, todo</string>
    <string name="m2p1_p173_rb2">Sí, parcialmente</string>
    <string name="m2p1_p173_rb3">No</string>
    <string name="m2p1_p173_rb4">NO SABE</string>
    <string name="m2p1_p174_pregunta">1.7.4.¿El dinero o bienes entregados salieron de la empresa?</string>
    <string name="m2p1_p174_rb1">Sí</string>
    <string name="m2p1_p174_rb2">No</string>
    <string name="m2p1_p174_rb3">NO SABE</string>
    <string name="m2p1_p181_pregunta">1.8.1.¿A qué sector pertenecía(n) el(los) servidor(es) público(s) involucrado(s) en el acto de corrupción:</string>
    <string name="m2p1_p181_ck1">Policía Nacional del Perú?</string>
    <string name="m2p1_p181_ck2">Poder Judicial?</string>
    <string name="m2p1_p181_ck3">Ministerio Público o Fiscalía?</string>
    <string name="m2p1_p181_ck4">Municipalidad?</string>
    <string name="m2p1_p181_ck5">SUNAT?</string>
    <string name="m2p1_p181_ck6">SUNARP?</string>
    <string name="m2p1_p181_ck7">INDECOPI?</string>
    <string name="m2p1_p181_ck8">Otro?</string>
    <string name="m2p1_p181_ck9">NO SABE</string>
    <string name="texto_exportar_encuesta_creada">Esta encuesta será exportada a la carpeta /GENERADOR en archivos xml.</string>
    <string name="texto_cargar_encuesta_existente">Se cargará los archivos XML de la encuesta existente en la carpeta /GENERADOR</string>
    <string-array name="departamentos">
        <item>SELECCIONE DEPARTAMENTO</item>
        <item>AMAZONAS [01]</item>
        <item>ANCASH [02]</item>
        <item>APURIMAC [03]</item>
        <item>AREQUIPA [04]</item>
        <item>AYACUCHO [05]</item>
        <item>CAJAMARCA [06]</item>
        <item>CALLAO [07]</item>
        <item>CUSCO [08]</item>
        <item>HUANCAVELICA [09]</item>
        <item>HUANUCO [10]</item>
        <item>ICA [11]</item>
        <item>JUNIN [12]</item>
        <item>LA LIBERTAD [13]</item>
        <item>LAMBAYEQUE [14]</item>
        <item>LIMA [15]</item>
        <item>LORETO [16]</item>
        <item>MADRE DE DIOS [17]</item>
        <item>MOQUEGUA [18]</item>
        <item>PASCO [19]</item>
        <item>PIURA [20]</item>
        <item>PUNO [21]</item>
        <item>SAN MARTIN [22]</item>
        <item>TACNA [23]</item>
        <item>TUMBES [24]</item>
        <item>UCAYALI [25]</item>
    </string-array>
    <string-array name="D_AMAZONAS">
        <item>SELECCIONE PROVINCIA</item>
        <item>CHACHAPOYAS [01]</item>
        <item>BAGUA [02]</item>
        <item>BONGARA [03]</item>
        <item>CONDORCANQUI [04]</item>
        <item>LUYA [05]</item>
        <item>RODRIGUEZ DE MENDOZA [06]</item>
        <item>UTCUBAMBA [07]</item>
    </string-array>
</resources>