<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/margenMaterial"
    app:cardBackgroundColor="@color/greyAccent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margenMaterial">
        <TextView
            android:id="@+id/radio_pregunta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/m2p1_p171_pregunta"
            android:textColor="@color/colorIneiPrimary"
            android:textStyle="bold"/>
        <CheckBox
            android:id="@+id/m2p1_p171_ck1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m2p1_p171_ck1"
            android:enabled="false"/>
        <CheckBox
            android:id="@+id/m2p1_p171_ck2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m2p1_p171_ck2"
            android:enabled="false"/>
        <CheckBox
            android:id="@+id/m2p1_p171_ck3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m2p1_p171_ck3"
            android:enabled="false"/>
        <CheckBox
            android:id="@+id/m2p1_p171_ck4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m2p1_p171_ck4"
            android:enabled="false"/>
        <CheckBox
            android:id="@+id/m2p1_p171_ck5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m2p1_p171_ck5"
            android:enabled="false"/>
        <CheckBox
            android:id="@+id/m2p1_p171_ck6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m2p1_p171_ck6"
            android:enabled="false"/>
        <CheckBox
            android:id="@+id/m2p1_p171_ck7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m2p1_p171_ck7"
            android:enabled="false"/>
    </LinearLayout>
</android.support.v7.widget.CardView>