<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/margenMaterial"
    app:cardBackgroundColor="@color/greyAccent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margenMaterial">
        <TextView
            android:id="@+id/radio_pregunta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/m2p1_p111_pregunta"
            android:textColor="@color/colorIneiPrimary"
            android:textStyle="bold"/>
        <CheckBox
            android:id="@+id/m2p1_p111_ck1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m2p1_p111_ck1"
            android:enabled="false"/>
        <CheckBox
            android:id="@+id/m2p1_p111_ck2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m2p1_p111_ck2"
            android:enabled="false"/>
        <CheckBox
            android:id="@+id/m2p1_p111_ck3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m2p1_p111_ck3"
            android:enabled="false"/>
        <CheckBox
            android:id="@+id/m2p1_p111_ck4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m2p1_p111_ck4"
            android:enabled="false"/>
        <CheckBox
            android:id="@+id/m2p1_p111_ck5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m2p1_p111_ck5"
            android:enabled="false"/>
        <CheckBox
            android:id="@+id/m2p1_p111_ck6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m2p1_p111_ck6"
            android:enabled="false"/>
        <CheckBox
            android:id="@+id/m2p1_p111_ck7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m2p1_p111_ck7"
            android:enabled="false"/>
        <include layout="@layout/m2p1_p111_sp71_layout" android:id="@+id/pregunta_m2p1_p111_sp71" android:visibility="gone"/>
        <include layout="@layout/m2p1_p111_sp72_layout" android:id="@+id/pregunta_m2p1_p111_sp72" android:visibility="gone"/>
        <include layout="@layout/m2p1_p111_sp73_layout" android:id="@+id/pregunta_m2p1_p111_sp73" android:visibility="gone"/>
        <CheckBox
            android:id="@+id/m2p1_p111_ck8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m2p1_p111_ck8"
            android:enabled="false"/>
        <EditText
            android:id="@+id/checkbox_especifique"
            android:layout_width="400dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:hint="Especifique"
            android:inputType="text"
            android:paddingLeft="5dp"
            android:visibility="gone"
            android:background="@drawable/edittext_disabled"/>
    </LinearLayout>
</android.support.v7.widget.CardView>