<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/margenMaterial"
    app:cardBackgroundColor="@color/greyAccent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margenMaterial">
        <TextView
            android:id="@+id/radio_pregunta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/m2p1_p173_pregunta"
            android:textColor="@color/colorIneiPrimary"
            android:textStyle="bold"/>
        <RadioGroup
            android:id="@+id/m2p1_p173_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m2p1_p173_rb1"
                android:enabled="false"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m2p1_p173_rb2"
                android:enabled="false"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m2p1_p173_rb3"
                android:enabled="false"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m2p1_p173_rb4"
                android:enabled="false"/>
        </RadioGroup>
    </LinearLayout>
</android.support.v7.widget.CardView>