<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/inei_fondo_app"
    tools:context="pe.com.ricindigus.generadorinei.activities.LoginActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="#771976D2">
            <LinearLayout
                android:layout_width="500dp"
                android:layout_height="400dp"
                android:background="@drawable/fondo_login"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@drawable/fondo_login_2"
                    android:elevation="@dimen/margenMaterial">
                    <TextView
                        android:id="@+id/login_titulo_encuesta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TITULO ENCUESTA 2017"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:paddingTop="@dimen/margin5dp"
                        android:paddingBottom="@dimen/margin5dp"
                        android:textColor="@color/colorIcons"
                        android:textSize="@dimen/textGrande"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_margin="@dimen/margenLogin">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/logoinei"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/CajaInput">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/login_input_usuario"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:hint="@string/texto_usuario"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/CajaInput"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/greyBluePrimary">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/login_input_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:hint="@string/texto_password"/>
                    </android.support.design.widget.TextInputLayout>
                    <Button
                        android:id="@+id/login_boton_ingresar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/texto_ingresar"
                        android:layout_marginTop="15dp"
                        android:theme="@style/RaisedButtonDark"/>
                </LinearLayout>
            </LinearLayout>
    </LinearLayout>
</LinearLayout>
